# tsdf_loop_closure

./: CHANGELOG.md  CMakeLists.txt  README.md  localmap_test_cleanup.rviz  localmap_test_node.rviz  loop_closure.rviz  package.xml  pcd_tsdf.rviz  slam6d.rviz  test_node.rviz
cfg/: LoopClosure.cfg  RayTracer.cfg  path.json  path_1.json
data/: frame_1000.pcd  test.pcd
documentation/: RUN.md  SHORT.md
include/loop_closure/bresenham/: bresenham.h
include/loop_closure/coordinate_systems/: coord_sys_transform.h
include/loop_closure/data_association/: association.h  association_manager.h
include/loop_closure/gtsam/: gtsam_wrapper.h
include/loop_closure/loop_closure/: lc_line_rejector.h  lc_range_rejector.h
include/loop_closure/map/: attribute_data_model.h  global_map.h  local_map.h  map_updater.h
include/loop_closure/params/: dataset_params.h  loop_closure_params.h  map_params.h  ray_tracer_params.h
include/loop_closure/path/: path.h  path_exploration.h
include/loop_closure/ray_tracer/: ray_tracer.h
include/loop_closure/serialization/: read_path_json.h
include/loop_closure/test/: math_test.h
include/loop_closure/util/: colors.h  constants.h  csv_wrapper.h  eigen_vs_ros.h  evaluation.h  filter.h  hdf5_constants.h  lc_evaluator.h  pcl_utility.h  point.h  runtime_evaluator.h  tsdf.h  tsdf_hw.h  update_tsdf.h  vgicp.h
include/loop_closure/visualization/: ros_viewhelper.h
launch/: benchmark_loop_closures.launch  benchmark_raytracer.launch  convert_global_map.launch  loop_closure.launch  pcd_hdf5_listener.launch  pcd_hdf5_publisher.launch  ray_tracing.launch  slam6d_listener.launch  test_lc_detection.launch  test_map_update.launch  test_partial_update.launch  transform_coord_sys.launch  update_tsdf_pcd.launch
params/: benchmark.yaml  convert_gm.yaml  general_params.yaml  loop_closure.yaml  pcd_params.yaml  slam6d_listening.yaml  test_map_update.yaml
scripts/: benchmark_enrichment_window.py  cc_histogram.py  general_purpose.py  global_update_time.py  global_update_time_balken.py  graph_error.py  partial_update_time.py  partial_update_time_balken.py  paths.py  paths3d.py  ray_trace_benchmark.py  translation_error.py  translation_error_gicp.py  translation_error_gicp_vs_lc.py  translation_error_total.py
scripts/data/: Histogram_CC.csv  Histogram_point_to_mesh.csv  Histogram_point_to_mesh_hannover.csv  Histogram_point_to_point.csv  Histogram_point_to_point_hannover.csv  final_path.csv  final_path_gicp.csv  fitness_scores.csv  fitness_scores_full.csv  global_update_time.csv  graph_error.csv  ground_truth.csv  initial_path.csv  partial_update_time.csv  physik_final_path.csv  physik_initial_path.csv  ray_trace_benchmark.csv  translation_error.csv  translation_error_gicp.csv  translation_error_gicp_vs_lc.csv  translation_error_test.csv  translation_error_total.csv  vorplatz_initial_path.csv  vorplatz_path_corrected_3d.csv
src/: loop_closure_node.cpp  map_node.cpp  path_listener.cpp  test_lc_detection.cpp  test_node.cu  tsdf.h
src/bresenham/: bresenham.h
src/color_matrix_deprecated/: color_matrix.cpp  color_matrix.h
src/data_association/: association.cpp  association.h  association_manager.cpp  association_manager.h
src/deprecated/: lc_test_node.cpp
src/gtsam/: gtsam_wrapper.cpp
src/map/: advanced_global_map.cpp  advanced_global_map.h  attribute_data_model.cpp  attribute_data_model.h  global_map.cpp  global_map.h  local_map.cpp  local_map.h  map_updater.cpp
src/nodes/: benchmark_loop_closures.cpp  benchmark_node.cpp  convert_global_map.cpp  elch_node.cpp  loop_closure_node.cpp  path_listener.cpp  pcd2tsdf.cpp  slam6d_listener.cpp  test_lc_detection.cpp  test_localmap.cpp  test_map_cleanup.cpp  test_map_update.cpp  test_node.cpp  test_partial_update.cpp  transform_coord_sys.cpp
src/nodes/data_publishers/: pcd_hdf5_publisher.cpp
src/options/: options_reader.cpp  options_reader.h
src/path/: path.cpp  path.h  path_exploration.cpp  path_exploration.h
src/ray_tracer/: ray_tracer.cpp  ray_tracer.h  tracer.cu  tracer.h
src/serialization/: read_path_json.h
src/test/: lc_test_node.cpp
src/util/: algorithm.h  colors.h  constants.h  csv_wrapper.cpp  eigen_to_ros.h  eigen_vs_ros.h  hdf5_constants.h  lc_evaluator.cpp  path.h  point.h  random.h  read_json.h  runtime_evaluator.cpp  tsdf.h  tsdf_hw.h  update_tsdf.cpp
src/visualization/: ros_viewhelper.h
stuff/: c_cpp_properties_template.json  ideas.md  todo.md  todo_list.md
stuff/thesis/: evaluations.md
test/: test_lc_rejectors.cpp
thesis/template/: main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  papers.bib
thesis/template/base/: alphadin.bst  plaindin.bst  thesis_KBS.cls
thesis/template/chapters/: appendix.tex  ausblick.tex  daten_assoziationen.tex  einleitung.tex  grundlagen.tex  libraries.tex  loopclosure.tex  map_update.tex  standdertechnik.tex  tsdf.tex
